--- a/index.html
+++ b/index.html
@@ -52,5 +52,46 @@
             <button class="btn-primary">Explore More</button>
            </div>
     </section>
+    <section class="container-three">
+        <div>
+            <div>
+                <h3 class="features">Features you will<br> love & enjoy</h3>
+            </div>
+            <div>
+                <p class="text-three">We have 3D Printing,Virtual Reality,Augmented Reality,Blockchain,Artificial Intelligence,Dexktop & Mobile Version,Drag & Drop Builder,Awesome Modern Design,Super Easy to Edit</p>
+            </div>
+            <div class="one">
+                <h3 class="text-four">Dexktop & Mobile Version</h3>
+                <p class="text-three">Cedreo app offers 3D home design software that allows builders, designers, remodeling professionals, and architects to create drawings and complete design proposals in just two hours.</p>
+            </div>
+            <div class="one">
+                <h3 class="text-four">Drag & Drop Builder</h3>
+                <p class="text-three">Beaver Builder comes with a live drag-and-drop interface. You get to see all your changes as you add them by dragging elements from the right sidebar and dropping them on your page.</p>
+            </div>
+            <div class="one">
+                <h3 class="text-four">Awesome Modern Design</h3>
+                <p class="text-three">Functionality, no ornamentation, functional, flowing, open space plans, exposed structure,use of modern materials like reinforced concrete, glass, and steel</p>
+            </div>
+            <div class="one">
+                <h3 class="text-four">Super Easy to Edit</h3>
+                <p class="text-three">SketchUp is a 3D CAD program that has been in the game for more than 20 years. It's primarily used by architects, interior designers, and landscape designers.</p>
+            </div>
+       </div>
+
+       <div>
+        <img class="design"src="images/architect.png" alt="">
+       </div>
+    </section>
+    <section>
+        <div>
+            <button class="btn"><span class="style">10+Year </span>Experience</button>
+        </div>
+    </section>
+    <section class="container-five">
+        <div>
+            <h3 class="feature">Some Facts</h3>
+            <p class="text-three career">In the career of Architecture some beautiful things are like interesting and creative work, attracts passionate, fascinating, fast-paced career</p>
+        </div>
+    </section>
 </body>
 </html>
