--- a/index.html
+++ b/index.html
@@ -93,5 +93,27 @@
             <p class="text-three career">In the career of Architecture some beautiful things are like interesting and creative work, attracts passionate, fascinating, fast-paced career</p>
         </div>
     </section>
+    <section class="container-six">
+        <div class="different">
+            <img class="font"src="images/icons/ribon.png" alt="">
+            <p class="number">45</p>
+            <p class="text-three">Awards Winnings</p>
+        </div>
+        <div class="different">
+            <img class="font"src="images/icons/projects.png" alt="">
+            <p class="number">1458</p>
+            <p class="text-three">Project Finished</p>
+        </div>
+        <div class="different">
+            <img class="font"src="images/icons/customers.png" alt="">
+            <p class="number">590</p>
+            <p class="text-three">Clients Worked</p>
+        </div>
+        <div class="different">
+            <img class="font"src="images/icons/email.png" alt="">
+            <p class="number">22578</p>
+            <p class="text-three">Email Send</p>
+        </div>
+    </section>
 </body>
 </html>
