--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
         </div>
     </section>
     <section class="container-six">
-        <div class="different">
+        <div class="different-box-one">
             <img class="font"src="images/icons/ribon.png" alt="">
             <p class="number">45</p>
             <p class="text-three">Awards Winnings</p>
         </div>
-        <div class="different">
+        <div class="different-box-two">
             <img class="font"src="images/icons/projects.png" alt="">
             <p class="number">1458</p>
             <p class="text-three">Project Finished</p>
         </div>
-        <div class="different">
+        <div class="different-box-three">
             <img class="font"src="images/icons/customers.png" alt="">
             <p class="number">590</p>
             <p class="text-three">Clients Worked</p>
         </div>
-        <div class="different">
+        <div class="different-box-four">
             <img class="font"src="images/icons/email.png" alt="">
             <p class="number">22578</p>
             <p class="text-three">Email Send</p>
