--- a/index.html
+++ b/index.html
@@ -115,5 +115,33 @@
             <p class="text-three">Email Send</p>
         </div>
     </section>
+    <section>
+        <div class="group-one">
+            <h3 class="feature">Our Sponspors</h3>
+            <p class="text-three career">Top solution providers will showcase their portfolio of products and service to the architecture industry during<br> architecture & design network. Presentation the most innovative and creative offerings,<br> every buyer will be able to find what their looking for for their current and<br> upcoming projects from architecture and design network partners.</p>
+           </div>
+    </section>
+    <section class="container-seven">
+        <div>
+            <img class="filter sponsor"src="images/sponsors/spotify.png" alt="">
+        </div>
+        <div>
+            <img class="filter sponsor"src="images/sponsors/amazon.png" alt="">
+        </div>
+        <div>
+            <img class="filter sponsor"src="images/sponsors/google.png" alt="">
+        </div>
+        <div>
+            <img class="filter sponsor"src="images/sponsors/telerama.png" alt="">
+        </div>
+        <div>
+            <img class="filter sponsor"src="images/sponsors/figma.png" alt="">
+        </div>
+    </section>
+    <section class="container-nine">
+         <div class="last-section">
+              <p class="text-five">Contact Us</p>
+         </div>
+    </section>
 </body>
 </html>
