--- a/index.html
+++ b/index.html
@@ -138,9 +138,32 @@
             <img class="filter sponsor"src="images/sponsors/figma.png" alt="">
         </div>
     </section>
+    <section class="container-eight">
+        <div>
+            <h3 class="feature">Our Partners</h3>
+            <p class="text-three career">Architecture & Design Network is supported and endorsed by key industry organization across the region and worldwide. Working hand in hand with our partners, we are bringing the most current and breakthrough ideas, news,  the latest and most high valued projects and, of course, the most interesting and exclusive industry buyers</p>
+        </div>
+    </section>
     <section class="container-nine">
+        <div>
+            <img class="sponsor"src="images/partners/partner-1.png" alt="">
+        </div>
+        <div>
+            <img class="sponsor"src="images/partners/partner-2.png" alt="">
+        </div>
+        <div>
+            <img class="sponsor"src="images/partners/partner-3.png" alt="">
+        </div>
+        <div>
+            <img class="sponsor"src="images/partners/partner-4.png" alt="">
+        </div>
+        <div>
+            <img class="sponsor"src="images/partners/partner-5.png" alt="">
+        </div>
+    </section>
+    <section class="container-ten">
          <div class="last-section">
-              <p class="text-five">Contact Us</p>
+              <p class="text-five">Contact Us<br>Email:shamirashuchi@gmail.com</p>
          </div>
     </section>
 </body>
