--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
            </div>
     </section>
     <section class="container-three">
-        <div>
+        <div class="container">
             <div>
                 <h3 class="features">Features you will<br> love & enjoy</h3>
             </div>
